[tool.poetry]
name = "content-moderation"
version = "0.1.0"
description = "Building Modular AI Agents for Ethical and Efficient Community Moderation"
authors = ["Ahmedsaed <ahmedsaed2652003@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.6.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
tdqm = "^0.0.1"
transformers = "^4.50.3"
datasets = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
cmtool = 'content_moderation.main:main'